ui reviewed + application finished + addded a concurrent test
Signed-off-by: Michele Brescia <michelebresciatorino@icloud.com>